# clump

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
benches/: clustering.rs  comparison.rs
clump-python/: Cargo.toml  README.md  clumppy.pyi  pyproject.toml
clump-python/src/: lib.rs
clump-python/tests/: test_clustering.py
dev/bench/: data.js
examples/: README.md  clustering.rs  evaluation.rs  flat_input.rs  mnist_kmeans_ari.rs  quickstart.rs  streaming.rs
proptest-regressions/cluster/: hdbscan.txt  optics.txt
scripts/: aws-bench-remote.sh  aws-bench.sh  compare-benches.py  fetch_mnist.sh
src/: clam.rs  error.rs  lib.rs
src/cluster/: adapt.rs  constrained.rs  correlation.rs  dbscan.rs  denstream.rs  distance.rs  evoc.rs  flat.rs  gpu.rs  hdbscan.rs  kmeans.rs  metrics.rs  mod.rs  optics.rs  projindex.rs  streaming.rs  traits.rs  util.rs  vptree.rs
tests/: edge_cases.rs  property_tests.rs  rosetta_clump.rs  rosetta_clump_hdbscan.rs  rosetta_clump_metrics.rs
tests/fixtures/rosetta/: clump_clustering.json  clump_hdbscan.json  clump_metrics.json  gen_clump.py  gen_clump_hdbscan.py  gen_clump_metrics.py
