[package]
name = "clump"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Dense clustering primitives (k-means, DBSCAN, EVōC)"
repository = "https://github.com/arclabs561/clump"
homepage = "https://github.com/arclabs561/clump"
documentation = "https://docs.rs/clump"
keywords = ["clustering", "kmeans", "ml", "algorithms"]
categories = ["algorithms", "science"]

[dependencies]
thiserror = "2.0"
rand = "0.9"
ndarray = "0.16"
rayon = { version = "1.10", optional = true }

[features]
default = []
parallel = ["dep:rayon"]

[dev-dependencies]
criterion = "0.7"
proptest = "1.9"

[[bench]]
name = "clustering"
harness = false