[package]
name = "clump"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Dense clustering primitives (k-means, DBSCAN, HDBSCAN, EVoC, COP-Kmeans, DenStream, correlation clustering)"
repository = "https://github.com/arclabs561/clump"
homepage = "https://github.com/arclabs561/clump"
documentation = "https://docs.rs/clump"
keywords = ["clustering", "kmeans", "ml", "algorithms"]
categories = ["algorithms", "science"]

[dependencies]
thiserror = "2.0"
rand = "0.9"
rayon = { version = "1.10", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.33", optional = true }
objc = { version = "0.2", optional = true }

[features]
default = []
parallel = ["dep:rayon"]
gpu = ["dep:metal", "dep:objc"]

[dev-dependencies]
criterion = "0.7"
proptest = "1.9"

[[bench]]
name = "clustering"
harness = false
[package.metadata.docs.rs]
features = ["parallel"]
rustdoc-args = ["--cfg", "docsrs"]
