[package]
name = "clump"
version = "0.5.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Dense clustering primitives (k-means, DBSCAN, HDBSCAN, EVoC, COP-Kmeans, DenStream, correlation clustering)"
repository = "https://github.com/arclabs561/clump"
homepage = "https://github.com/arclabs561/clump"
documentation = "https://docs.rs/clump"
keywords = ["clustering", "kmeans", "dbscan", "hdbscan", "ml"]
categories = ["algorithms", "science"]

[workspace]

[dependencies]
thiserror = "2.0"
rand = "0.9"
innr = { version = "0.2", optional = true }
matrixmultiply = { version = "0.3", optional = true }
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
ndarray = { version = "0.16", optional = true }
hopfield = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.33", optional = true }
objc = { version = "0.2", optional = true }

[features]
default = []
parallel = ["dep:rayon"]
gpu = ["dep:metal", "dep:objc"]
serde = ["dep:serde"]
ndarray = ["dep:ndarray"]
simd = ["dep:innr"]
blas = ["dep:matrixmultiply"]
hopfield = ["dep:hopfield"]

[dev-dependencies]
criterion = "0.7"
proptest = "1.9"
linfa = "0.8.1"
linfa-clustering = "0.8.1"
ndarray = "0.16"
ndarray-rand = "0.15"
rand_xoshiro = "0.6"

[[bench]]
name = "clustering"
harness = false

[[bench]]
name = "comparison"
harness = false
[package.metadata.docs.rs]
features = ["parallel"]
rustdoc-args = ["--cfg", "docsrs"]
